test/libsolidity/syntaxTests/types/empty_tuple_lvalue_array.sol
contract C {
    function f() private pure {}
    function a() public {
        uint x;
        uint y;
        (x, y) = [f(), f()];
    }
}
// ----
// TypeError: (122-125): Array component cannot be empty.
